# Inv-Man-Intake

./: .coverage  .env.example  .gitignore  .project_modules.txt  Issues.txt  README.md  ci-metrics.json  codex-prompt-104.md  codex-prompt-172.md  codex-prompt-393.md  codex-prompt-399.md  codex-prompt-402.md  codex-prompt-412.md  codex-prompt-480.md  codex-prompt-483.md  codex-prompt-489.md  codex-prompt-98.md  coverage-ci.json  coverage-ci.xml  coverage-delta.json  coverage.json  coverage.xml  frontend_verify.py  langsmith-fleet-worker-attempt.json  langsmith-fleet.ndjson  metrics-history.ndjson  pr73-thread-review.md  pyproject.toml  pytest-junit-ci.xml  pytest-junit.xml  requirements.txt  ux_review.py  workloop-state.md
.agents/: issue-112-ledger.yml  issue-113-ledger.yml  issue-115-ledger.yml  issue-118-ledger.yml  issue-120-ledger.yml  issue-122-ledger.yml  issue-123-ledger.yml  issue-124-ledger.yml  issue-125-ledger.yml  issue-126-ledger.yml  issue-127-ledger.yml  issue-128-ledger.yml  issue-130-ledger.yml  issue-132-ledger.yml  issue-134-ledger.yml  issue-138-ledger.yml  issue-139-ledger.yml  issue-142-ledger.yml  issue-146-ledger.yml  issue-31-ledger.yml  issue-32-ledger.yml  issue-33-ledger.yml  issue-34-ledger.yml  issue-5-ledger.yml  issue-630-ledger.yml  issue-653-ledger.yml  issue-7-ledger.yml  issue-758-ledger.yml  issue-761-ledger.yml  issue-765-ledger.yml  issue-767-ledger.yml  issue-777-ledger.yml  issue-780-ledger.yml  issue-787-ledger.yml  issue-836-ledger.yml  issue-87-ledger.yml  issue-88-disposition.md  issue-88-ledger.yml  issue-89-ledger.yml  issue-90-ledger.yml  (+3 more)
.codex/: workloop-state.md
.github/: PR77-unresolved-threads.md
.github/scripts/: keepalive_loop.js  post_completion_comment.js  review_thread_audit.js
.github/workflows/: agents-auto-pilot.yml  agents-pr-health.yml  autofix.yml  backplane-conformance.yml  ci.yml  maint-76-claude-code-review.yml  pr-00-gate.yml
.outcomes/: autofix-pr388-attempt3.md  autofix-pr388-sha-023c365f.md  autofix-pr388-sha-1d9f631b.md  autofix-pr388-sha-371b24ae.md  autofix-pr388-sha-4d7d2d5d.md  autofix-pr388-sha-675efd6e.md  autofix-pr388-sha-7c3ed75d.md  autofix-pr388-sha-8525b764.md  autofix-pr388-sha-8fd89840.md  autofix-pr388-sha-90f1593a.md  autofix-pr388-sha-980f589b.md  autofix-pr396-ci-diagnostics.md  autofix-pr397-workflow-blocker.md  autofix-pr480-attempt2.md  verify-compare-pr75.md
agents/: codex-119.md  codex-121.md  codex-397.md  codex-630.md  codex-7.md  codex-758.md  codex-761.md  codex-765.md  codex-840.md
app/: __init__.py  browser_verification.py  index.html  live-verification.md  pyodide_packet_bridge.py  static_operator_app.js  stlite-version.txt  streamlit_app.py
app/live-verification-artifacts/: browser-demo-score.json
artifacts/langsmith/: langsmith-fleet.ndjson
artifacts/reference/: explainability.json  manifest.json  metadata.json  run.json  threshold-summary.json
config/: extraction_thresholds.yaml  ux_review_policy.json
config/scoring_weights/: CHANGELOG.md  activist.toml  credit.toml  credit_long_short.toml  credit_relative_value.toml  equity.toml  equity_market_neutral.toml  macro.toml  quant.toml  (+4 more)
data/: pr81_threads.json  pr81_threads_classified.json  pr81_threads_report.md
docs/: INV_MAN_INTAKE_PLAN_V1.md  ISSUE_EXECUTION_SEQUENCE.md  SETUP_CHECKLIST.md  baseline-kit-dependency.md  pr-109-unresolved-threads.md  pr-68-unresolved-threads.md  pr-72-unresolved-threads.md  pr-74-unresolved-threads.md  pr-76-thread-disposition.md  pr-80-unresolved-threads.md  pr-84-unresolved-threads.md  pr-85-unresolved-threads.md  pr-86-unresolved-threads.md
scripts/: __init__.py  ci_coverage_delta.py  ci_history.py  ci_metrics.py  classify_threads.py  emit_reference_run.sh  extraction_quality_report.py  fetch_offline_runtime.py  fetch_pr_threads.py  generate_classification_report.py  generate_pr_thread_review.py  image_feedback_report.py  list-unresolved-pr-threads.md  list_unresolved_pr_threads.py  list_unresolved_pr_threads.sh  list_unresolved_review_threads.py  pr_review_thread_inventory.py  pr_unresolved_threads.py  scoring_calibration_report.py  sync_test_dependencies.py  thread_reply_builder.py  unresolved_thread_inventory.py  unresolved_thread_report.py  update_pr_comment.py  validate_child_issues.py  validate_classification_output.py  validate_dependency_test_setup.py  verify_compare_disposition.py  verify_static_spa_pyodide.py  verify_stlite_browser.py  verify_stlite_browser_demo.py
smoke/: claude-smoke.txt
tests/: __init__.py  conftest.py  frontend_verify.py  test_analyst_queue_render.py  test_ci_coverage_delta.py  test_ci_metrics.py  test_classify_threads.py  test_decoupling_doc_type.py  test_demo_presentation.py  test_disposition_note.py  test_epic_issue_contracts.py  test_epic_milestones.py  test_extraction_orchestrator.py  test_followup_issue_generator.py  test_generate_pr_thread_review.py  test_golden_reference_runs.py  test_graphics_gallery_break.py  test_lineage_packet.py  test_list_unresolved_pr_threads.py  test_list_unresolved_review_threads.py  test_main.py  test_offline_static_bundle.py  test_operator_assistant_design.py  test_packaging_install.py  test_packet_pipeline.py  test_plan_v1_dependency_section.py  test_pr_review_thread_inventory.py  test_pr_unresolved_threads.py  test_pr_verifier_disposition.py  test_pr_workflow.py  test_resolve_mypy_pin.py  test_stlite_no_external_cdn.py  test_thread_reply_builder.py  test_unresolved_thread_inventory.py  test_unresolved_thread_report.py  test_ux_review.py  test_v1_acceptance_smoke.py  test_validate_child_issues.py  test_validation_queue_api.py  test_verify_compare_disposition.py  (+3 more)
tools/: __init__.py  langchain_client.py  llm_provider.py  llm_registry.py  requirements-llm.txt  resolve_mypy_pin.py
(+320 files in other folders)
