[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inv-man-intake"
version = "0.1.0"
description = "Investment manager intake-to-scoring pipeline with extraction, provenance, validation queue, and scoring contracts"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "stranske"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "langsmith>=0.4.59",
    "stranske-pdf-extract @ git+https://github.com/stranske/Workflows.git@pdf-extract-v0.1.0#subdirectory=packages/stranske_pdf_extract",
]

[project.optional-dependencies]
app = [
    "streamlit==1.60.0",
]
extraction-docling = [
    "stranske-pdf-extract[docling] @ git+https://github.com/stranske/Workflows.git@pdf-extract-v0.1.0#subdirectory=packages/stranske_pdf_extract",
]
dev = [
    "playwright>=1.56.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.22",
    "mypy==2.3.0",
    "black==26.5.1",
    "tomlkit==0.15.1",
    "pydantic==2.13.4",
    "pytest-regressions==2.11.0",
    "docling",
]

[project.urls]
Homepage = "https://github.com/stranske/Inv-Man-Intake"
Repository = "https://github.com/stranske/Inv-Man-Intake"

[project.scripts]
inv-man-ingest = "inv_man_intake.cli.ingest:main"

[tool.setuptools.package-data]
inv_man_intake = ["data/migrations/sql/*.sql", "py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=inv_man_intake --cov-report=term-missing --cov-report=xml -p no:langsmith_plugin -p no:pytest_langsmith_plugin"
pythonpath = ["src"]

[tool.coverage.run]
source = ["inv_man_intake"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["inv_man_intake", "tools"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
exclude = ["^scripts/", "^tools/"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["stranske_pdf_extract", "stranske_pdf_extract.*"]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]